# Evolution-of-TodoList

./: .gitignore  AGENTS.md  CLAUDE.md  Hackathon II - Todo Spec-Driven Development.md  QUICKSTART.md  README.md  constitution.md  pyproject.toml  requirements.txt
backend/: .gitignore  CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_models.py  002_add_performance_indexes.py  003_delete_orphan_tasks.py  004_enforce_tasks_owner_id_not_null.py  005_task_owner_fk_ondelete_cascade.py  006_task_deep_work_fields.py
backend/docker/: backend.Dockerfile  docker-compose.yml
backend/scripts/: prepare_e2e_db.py
backend/src/: __init__.py  database.py  main.py  models.py
backend/src/auth/: auth_handler.py
backend/src/middleware/: __init__.py  auth.py  rate_limit.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/routes/: __init__.py  auth.py  tasks.py
backend/src/schemas/: __init__.py  common.py  task.py  user.py
backend/src/services/: __init__.py  auth_service.py  task_service.py  user_service.py
backend/src/utils/: __init__.py  datetime_utils.py  db_url.py  error_mapper.py  token.py
backend/tests/: conftest.py  test_datetime_utils.py  test_db_fixture_smoke.py  test_db_url.py  test_main.py  test_migration_revision_ids.py  test_models.py  test_performance.py  test_schemas.py  test_security.py
backend/tests/load/: README.md  locustfile.py
backend/tests/test_performance/: test_session_overhead.py  test_task_volume.py
backend/tests/test_routes/: test_auth.py  test_tasks.py  test_tasks_auth.py
(+169 files in other folders)
