[tool.poetry]
name = "fastapi-todo-backend"
version = "0.1.0"
description = "Focentra REST API with FastAPI, SQLModel, and Neon PostgreSQL"
authors = ["metachemist <meta.chemist.22@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
pydantic = {version = "^2.10.0", extras = ["email"]}
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.20"
neon = "^0.1.0"
redis = {extras = ["asyncio"], version = "^7.1.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
black = "^24.10.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
factory = true
